--- a/src/pages/Enseignants.module.css
+++ b/src/pages/Enseignants.module.css
@@ -34,19 +34,20 @@
 }
 .namecol {
   padding: 10px 20px;
-  width: 70%;
   font-family: Quicksand, sans-serif;
   font-weight: 500;
   font-size: 14px;
+  display: flex;
+  justify-content: space-between;
 }
-
-.table td {
+text .table td {
   padding: 10px 0;
 }
 
 .table td:not(.namecol) {
   text-align: center;
 }
+
 .table tr {
   transition-duration: 300ms;
   cursor: pointer;
@@ -55,7 +56,7 @@
   background-color: #dedede;
 }
 .table button {
-  width: 60px;
+  width: 30px;
   font-size: 16px;
   background-color: transparent;
   border: none;
@@ -224,7 +225,21 @@
 .loading * {
   scale: 1.3;
 }
+.badge {
+  margin-left: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #333333;
+  font-family: Quicksand, sans-serif;
+}
+.table svg {
+  font-size: 14px;
+}
 @media screen and (min-width: 1000px) {
+  .table svg {
+    font-size: 21px;
+  }
   .page h1 {
     padding: 30px 0;
     font-size: 52px;
@@ -238,9 +253,20 @@
     width: 100%;
   }
   .namecol {
-    width: 85%;
     font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+
+  .badge {
+    width: 9rem;
+    text-align: center;
+    color: #333333;
+    font-size: 18px;
+    font-family: Quicksand, sans-serif;
+  }
+
   .table td:first-child {
     padding-left: 30px;
   }
