--- a/src/components/login/LoginForm.module.css
+++ b/src/components/login/LoginForm.module.css
@@ -116,7 +116,7 @@
 
 .extrasContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 0;
   margin-top: -2%;
   width: 82%;
